Fixed bars alignment.

--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ body section article {
 .graph-bar {
 	border-radius: 5px;
 	position: relative;
+	align-self: end;
 }
 
 .graph-bar[title]:hover:after {
